--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@use-gesture/react": "^10.3.1",
+    "autoprefixer": "^10.4.19",
     "flowbite": "^2.3.0",
     "isotope-layout": "^3.0.6",
     "react": "^18.2.0",
